--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc && ncc build",
+    "build": "tsc && ncc build --minify",
     "format": "ts-standard --fix **/*.ts",
     "format-check": "ts-standard **/*.ts",
     "test": "jest --coverage",
