chore: add badges

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Setup mockery environment and add it to the PATH'
 author: 'Ivan Stasiuk'
 inputs:
   mockery-version:
-    description: 'The mockery version to download (if necessary) and use. Exact version should be provided.'
+    description: 'The mockery version to download and use. Exact version should be provided.'
     required: true
   token:
     description: Used to pull distributions from mockery repo. Since there's a default, this is typically not supplied by the user.
