--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "ts-node": "^10.4.0",
     "ts-standard": "^11.0.0",
     "typescript": "^3.8.3"
+  },
+  "standard": {
+    "ignore": "dist/"
   }
 }
