--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "@types/semver": "^7.3.9",
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.33.0",
     "jest": "^27.4.4",
     "jest-circus": "^27.4.4",
     "nock": "^13.2.1",
