--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "ts-standard --fix src/*.ts",
     "format-check": "ts-standard src/*.ts",
     "test": "jest --coverage",
-    "pre-checkin": "np, run format && npm run build && npm test"
+    "pre-checkin": "npm run format && npm run build && npm test"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "@types/semver": "^7.3.9",
+    "@types/prettier": "2.6.0",
     "@vercel/ncc": "^0.33.0",
     "jest": "^27.4.4",
     "jest-circus": "^27.4.4",
