--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,6 +15,7 @@ jobs:
         id: release
         with:
           release-type: node
+          bump-minor-pre-major: true
       - uses: actions/checkout@v3
       - name: tag major and patch versions
         run: |
