--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -10,26 +10,20 @@ on:
       - '**.md'
 jobs:
   run:
-    name: Run
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
         operating-system: [macos-latest, windows-latest, ubuntu-latest]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set Node.js 16
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: npm install
-        run: npm install
+      - run: npm install
 
-      - name: npm test
-        run: npm test
+      - run: npm test
 
-      - name: audit packages
-        run: npm audit --audit-level=high
+      - run: npm audit --audit-level=high
         if: matrix.operating-system == 'ubuntu-latest'
