--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -23,16 +23,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js 16
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: Rebuild the dist/ directory
-        run: npm run build
+      - run: npm run build
 
       - name: Compare the expected and actual dist/ directories
         run: |
