--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,19 +12,15 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set Node.js 16
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: npm install
-        run: npm install
+      - run: npm install
 
-      - name: Upload coverage to codeclimate
-        uses: paambaati/codeclimate-action@v3.0.0
+      - uses: paambaati/codeclimate-action@v4
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_TOKEN }}
         with:
