--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc && ncc build --minify",
-    "format": "ts-standard --fix src/*.ts",
-    "format-check": "ts-standard src/*.ts",
+    "fmt:fix": "ts-standard --fix src/*.ts",
+    "fmt": "ts-standard src/*.ts",
     "test": "jest --coverage",
     "pre-checkin": "npm run format && npm run build && npm test"
   },
@@ -32,18 +32,17 @@
     "semver": "^7.3.5"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.12",
-    "@types/semver": "^7.3.9",
+    "@types/jest": "^28",
+    "@types/node": "^20",
     "@types/prettier": "2.6.0",
+    "@types/semver": "^7.3.9",
     "@vercel/ncc": "^0.33.0",
-    "jest": "^27.4.4",
-    "jest-circus": "^27.4.4",
+    "jest": "^28",
+    "jest-circus": "^28",
     "nock": "^13.2.1",
-    "ts-jest": "^27.1.1",
-    "ts-node": "^10.4.0",
-    "ts-standard": "^11.0.0",
-    "typescript": "^3.8.3"
+    "ts-jest": "^28",
+    "ts-standard": "*",
+    "typescript": "<4.5.0"
   },
   "standard": {
     "ignore": "dist/"
