--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@types/node": "^20",
     "@types/prettier": "2.6.0",
     "@types/semver": "^7.3.9",
-    "@vercel/ncc": "^0.33.0",
+    "@vercel/ncc": "^0.38",
     "jest": "^28",
     "jest-circus": "^28",
     "nock": "^13.2.1",
     "ts-jest": "^28",
     "ts-standard": "*",
-    "typescript": "<4.5.0"
+    "typescript": "<=4.5.0"
   },
   "standard": {
     "ignore": "dist/"
