--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,6 +20,7 @@ jobs:
           cache: 'npm'
 
       - run: npm install
+      - run: npm test
 
       - uses: codecov/codecov-action@v5
         with:
