--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc && ncc build --minify",
     "fmt": "prettier **/*.ts --write",
-    "test": "jest --coverage",
-    "pre-checkin": "npm run format && npm run build && npm test"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
